--- a/G4-TaskManager/G4-TaskManager/Views/LoginView.xaml
+++ b/G4-TaskManager/G4-TaskManager/Views/LoginView.xaml
@@ -8,7 +8,24 @@
         Style="{StaticResource WindowStyle}">
 
     <Grid>
-        <Border Style="{StaticResource EstilosBordesFormulario}" 
+        <!-- Filas -->
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <!-- Logo y Título -->
+        <Grid Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top">
+                <Image Source="/Resources/Iconos/logo.png" Width="50" Height="50" />
+                <TextBlock Style="{StaticResource EstiloTextoTitulo}" Text="Login" FontSize="24" VerticalAlignment="Center" Margin="30,0,0,0" />
+            </StackPanel>
+        </Grid>
+
+        <!-- Formulario -->
+        <Border Grid.Row="3" Style="{StaticResource EstilosBordesFormulario}" 
                 HorizontalAlignment="Center" VerticalAlignment="Center" 
                 Width="300" Height="260">
             <Grid>
