--- a/G4-TaskManager/G4-TaskManager/Views/LoginView.xaml
+++ b/G4-TaskManager/G4-TaskManager/Views/LoginView.xaml
@@ -10,9 +10,7 @@
     <Grid>
         <!-- Filas -->
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="60"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
@@ -20,14 +18,14 @@
         <Grid Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top">
                 <Image Source="/Resources/Iconos/logo.png" Width="50" Height="50" />
-                <TextBlock Style="{StaticResource EstiloTextoTitulo}" Text="Login" FontSize="24" VerticalAlignment="Center" Margin="30,0,0,0" />
+                <TextBlock Style="{StaticResource EstiloTextoTitulo}" Text="Login" FontSize="24" VerticalAlignment="Center" Margin="20,0,0,0" />
             </StackPanel>
         </Grid>
 
         <!-- Formulario -->
-        <Border Grid.Row="3" Style="{StaticResource EstilosBordesFormulario}" 
-                HorizontalAlignment="Center" VerticalAlignment="Center" 
-                Width="300" Height="260">
+        <Border Grid.Row="1" Style="{StaticResource EstilosBordesFormulario}" 
+                HorizontalAlignment="Center" VerticalAlignment="Top" 
+                Width="300" Height="260" Margin="0,40,0,0">
             <Grid>
                 <!-- Filas -->
                 <Grid.RowDefinitions>
