--- a/G4-TaskManager/G4-TaskManager/Views/LoginView.xaml
+++ b/G4-TaskManager/G4-TaskManager/Views/LoginView.xaml
@@ -17,16 +17,8 @@
         <!-- Logo y Título -->
         <Grid Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,10,0,0">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top">
-                <Image Source="/Resources/Iconos/logo.png" Width="50" Height="50" >
-                    <Image.Effect>
-                        <DropShadowEffect BlurRadius="60"/>
-                    </Image.Effect>
-                </Image>
-                <TextBlock Style="{StaticResource EstiloTextoTitulo}" Text="Login" FontSize="24" VerticalAlignment="Center" Margin="20,0,0,0">
-                    <TextBlock.Effect>
-                        <DropShadowEffect BlurRadius="25"/>
-                    </TextBlock.Effect>
-                </TextBlock>
+                <Image Source="/Resources/Iconos/logo.png" Style="{StaticResource EstiloImagen}" />
+                <TextBlock Style="{StaticResource EstiloTextoTitulo}" Text="Login" FontSize="24" VerticalAlignment="Center" Margin="20,0,0,0"/>
             </StackPanel>
         </Grid>
 
@@ -54,22 +46,14 @@
                 </Grid.ColumnDefinitions>
 
                 <!-- Usuario -->
-                <TextBlock Grid.Row="2" Text="Usuario / ID" Style="{StaticResource EstilosSubtitulos}">
-                    <TextBlock.Effect>
-                        <DropShadowEffect BlurRadius="18"/>
-                    </TextBlock.Effect>
-                </TextBlock>
+                <TextBlock Grid.Row="2" Text="Usuario / ID" Style="{StaticResource EstilosSubtitulos}"/>
                 <TextBox x:Name="UsuarioTextBox" Grid.Row="3" Style="{StaticResource EstilosTextBox}"/>
 
                 <!-- Contraseña -->
-                <TextBlock Grid.Row="5" Text="Contraseña" Style="{StaticResource EstilosSubtitulos}">
-                    <TextBlock.Effect>
-                        <DropShadowEffect BlurRadius="18"/>
-                    </TextBlock.Effect>
-                </TextBlock>
+                <TextBlock Grid.Row="5" Text="Contraseña" Style="{StaticResource EstilosSubtitulos}"/>
                 <PasswordBox x:Name="ContraseñaPasswordBox" Grid.Row="6" Style="{StaticResource EstilosPasswordBox}"/>
 
-                <!-- Botón -->
+                <!-- Botón Iniciar Sesión -->
                 <Button Grid.Row="8" Content="Iniciar Sesión" Style="{StaticResource EstilosButton}" 
                         Click="IniciarSesion_Click"/>
             </Grid>
