--- a/G4-EmployeeRegisterSol/G4-EmployeeRegister/App.xaml
+++ b/G4-EmployeeRegisterSol/G4-EmployeeRegister/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:G4_EmployeeRegister"
-             StartupUri="LoginView.xaml">
+             StartupUri="Views/LoginView.xaml">
     <!-- Estilos de la App -->
     <Application.Resources>
         <ResourceDictionary>
