--- a/G4-EmployeeRegisterSol/G4-EmployeeRegister/Resources/StyleResources.xaml
+++ b/G4-EmployeeRegisterSol/G4-EmployeeRegister/Resources/StyleResources.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
         <!-- Fondo -->
-        <Style TargetType="Page" x:Key="WindowStyle">
+        <Style TargetType="Page" x:Key="PageStyle">
             <Setter Property="Background">
                 <Setter.Value>
                     <ImageBrush ImageSource="Fondos/login.jpg" Stretch="Fill"/>
