--- a/G4-EmployeeRegisterSol/G4-EmployeeRegister/Views/LoginView.xaml
+++ b/G4-EmployeeRegisterSol/G4-EmployeeRegister/Views/LoginView.xaml
@@ -7,12 +7,12 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="LoginView"
-      Style="{StaticResource WindowStyle}">
+      Style="{StaticResource PageStyle}" >
 
-    <Grid>
+    <Grid VerticalAlignment="Center">
         <!-- Filas -->
         <Grid.RowDefinitions>
-            <RowDefinition Height="60"/>
+
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
@@ -56,8 +56,7 @@
                 <PasswordBox x:Name="ContraseñaPasswordBox" Grid.Row="6" Style="{StaticResource EstilosPasswordBox}"/>
 
                 <!-- Botón Iniciar Sesión -->
-                <Button Grid.Row="8" Content="Iniciar Sesión" Style="{StaticResource EstilosButton}" 
-                        Click="IniciarSesion_Click"/>
+                <Button Grid.Row="8" Content="Iniciar Sesión" Style="{StaticResource EstilosButton}"/>
             </Grid>
         </Border>
     </Grid>
