--- a/G4-EmployeeRegisterSol/G4-EmployeeRegister/Views/LoginView.xaml
+++ b/G4-EmployeeRegisterSol/G4-EmployeeRegister/Views/LoginView.xaml
@@ -1,14 +1,14 @@
-﻿<Page x:Class="G4_EmployeeRegister.Views.LoginView"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:G4_EmployeeRegister.Views"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="LoginView"
-      Style="{StaticResource PageStyle}" >
-
+﻿<Window x:Class="G4_EmployeeRegister.Views.LoginView"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:G4_EmployeeRegister.Views"
+        mc:Ignorable="d"
+        Title="LoginView" Height="450" Width="800"
+        Style="{StaticResource WindowStyle}"
+        ResizeMode="NoResize">
+    
     <Grid VerticalAlignment="Center">
         <!-- Filas -->
         <Grid.RowDefinitions>
@@ -60,4 +60,4 @@
             </Grid>
         </Border>
     </Grid>
-   </Page>
+</Window>
