--- a/G4-EmployeeRegisterSol/G4-EmployeeRegister/Views/AdminView.xaml
+++ b/G4-EmployeeRegisterSol/G4-EmployeeRegister/Views/AdminView.xaml
@@ -6,9 +6,14 @@
       xmlns:local="clr-namespace:G4_EmployeeRegister.Views"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="AdminView">
+      Title="AdminView" Height="450" Width="800">
+
+    <!-- Fondo -->
+    <Page.Background>
+        <ImageBrush ImageSource="../Resources/Fondos/adminfondo.jpg" Stretch="Fill"/>
+    </Page.Background>
 
     <Grid>
-        
+
     </Grid>
 </Page>
