--- a/G4-EmployeeRegisterSol/G4-EmployeeRegister/Views/UserView.xaml
+++ b/G4-EmployeeRegisterSol/G4-EmployeeRegister/Views/UserView.xaml
@@ -1,12 +1,19 @@
-﻿<Window x:Class="G4_EmployeeRegister.Views.UserView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:G4_EmployeeRegister.Views"
-        mc:Ignorable="d"
-        Title="UserView" Height="450" Width="800">
+﻿<Page x:Class="G4_EmployeeRegister.Views.UserView"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:G4_EmployeeRegister.Views"
+      mc:Ignorable="d" 
+      d:DesignHeight="450" d:DesignWidth="800"
+      Title="UserView" Height="450" Width="800">
+
+    <!-- Fondo -->
+    <Page.Background>
+        <ImageBrush ImageSource="../Resources/Fondos/usuariofondo.jpg" Stretch="Fill"/>
+    </Page.Background>
+
     <Grid>
-        
+
     </Grid>
-</Window>
+</Page>
