--- a/G4-EmployeeRegister/G4-EmployeeRegister/UserControls/UsersControlador.xaml
+++ b/G4-EmployeeRegister/G4-EmployeeRegister/UserControls/UsersControlador.xaml
@@ -7,9 +7,10 @@
              mc:Ignorable="d" 
              d:DesignHeight="80" d:DesignWidth="800">
     <Grid >
+        
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="4*"/>
         </Grid.ColumnDefinitions>
 
         <Image Grid.Column="0" 
@@ -17,6 +18,7 @@
                Width="50" 
                Height="50" 
                VerticalAlignment="Center" 
+               HorizontalAlignment="Center"
                Margin="20,0,10,0"/>
 
         <TextBlock Grid.Column="1" 
@@ -25,6 +27,6 @@
                    FontWeight="Bold" 
                    Foreground="White" 
                    VerticalAlignment="Center" 
-                   HorizontalAlignment="Left"/>
+                   HorizontalAlignment="Center"/>
     </Grid>
 </UserControl>
