--- a/G4-EmployeeRegister/G4-EmployeeRegister/Views/EditPage.xaml
+++ b/G4-EmployeeRegister/G4-EmployeeRegister/Views/EditPage.xaml
@@ -15,9 +15,9 @@
 
     <Grid Grid.Column="1">
         <!-- Formulario -->
-        <Border Grid.Row="0" Style="{StaticResource EstilosBordesFormulario}" 
+        <Border Style="{StaticResource EstilosBordesFormulario}" 
                 HorizontalAlignment="Center" VerticalAlignment="Center" 
-                Width="500" Height="Auto" Margin="0,0,0,0">
+                Width="Auto" Height="Auto" Margin="0,0,0,0">
             <Grid>
                 <!-- Filas -->
                 <Grid.RowDefinitions>
@@ -31,55 +31,72 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
-                <StackPanel Grid.Row="0">
-                    <!-- Username -->
+                <!-- Columnas -->
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="8*"/>
+                </Grid.ColumnDefinitions>
+
+                <!-- Username -->
+                <StackPanel Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">
                     <TextBlock Text="Username" Style="{StaticResource EstilosSubtitulos}"/>
-                    <TextBox x:Name="UsernameTextBox" Height="18" Style="{StaticResource EstilosTextBox}"/>
+                </StackPanel>
+                <StackPanel Grid.Row="0" Grid.Column="1" VerticalAlignment="Center">
+                    <TextBox x:Name="UsernameTextBox" Style="{StaticResource EstilosTextBox}" Margin="0,10,0,10"/>
                 </StackPanel>
 
-                <StackPanel Grid.Row="1">
-                    <!-- Nombre Usuario -->
+                <!-- Nombre Usuario -->
+                <StackPanel Grid.Row="1" Grid.Column="0" VerticalAlignment="Center">
                     <TextBlock Text="Nombre" Style="{StaticResource EstilosSubtitulos}"/>
-                    <TextBox x:Name="NombreTextBox" Height="18" Style="{StaticResource EstilosTextBox}"/>
+                </StackPanel>
+                <StackPanel Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" Margin="0,10,0,10">
+                    <TextBox x:Name="NombreTextBox" Style="{StaticResource EstilosTextBox}"/>
                 </StackPanel>
 
-                <StackPanel Grid.Row="2">
-                    <!-- Apellidos Usuario -->
+                <!-- Apellidos Usuario -->
+                <StackPanel Grid.Row="2" Grid.Column="0" VerticalAlignment="Center">
                     <TextBlock Text="Apellidos" Style="{StaticResource EstilosSubtitulos}"/>
-                    <TextBox x:Name="ApellidosTextBox" Height="18" Style="{StaticResource EstilosTextBox}"/>
+                </StackPanel>
+                <StackPanel Grid.Row="2" Grid.Column="1"  VerticalAlignment="Center">
+                    <TextBox x:Name="ApellidosTextBox" Style="{StaticResource EstilosTextBox}" Margin="0,10,0,10"/>
                 </StackPanel>
 
-                <StackPanel Grid.Row="3">
-                    <!-- Email Usuario -->
+                <!-- Email Usuario -->
+                <StackPanel Grid.Row="3" Grid.Column="0" VerticalAlignment="Center">
                     <TextBlock Text="Email" Style="{StaticResource EstilosSubtitulos}"/>
-                    <TextBox x:Name="EmailTextBox" Height="18" Style="{StaticResource EstilosTextBox}"/>
+                </StackPanel>
+                <StackPanel Grid.Row="3" Grid.Column="1" VerticalAlignment="Center">
+                    <TextBox x:Name="EmailTextBox" Style="{StaticResource EstilosTextBox}" Margin="0,10,0,10"/>
                 </StackPanel>
 
-                <StackPanel Grid.Row="4">
-                    <!-- Contraseña Usuario -->
+                <!-- Contraseña Usuario -->
+                <StackPanel Grid.Row="4" Grid.Column="0" VerticalAlignment="Center">
                     <TextBlock Text="Contraseña" Style="{StaticResource EstilosSubtitulos}"/>
-                    <TextBox x:Name="ContraseñaTextBox" Height="18" Style="{StaticResource EstilosTextBox}"/>
+                </StackPanel>
+                <StackPanel Grid.Row="4" Grid.Column="1" VerticalAlignment="Center">
+                    <TextBox x:Name="ContraseñaTextBox" Style="{StaticResource EstilosTextBox}" Margin="0,10,0,10"/>
                 </StackPanel>
 
-                <StackPanel Grid.Row="5">
-                    <!-- Rol Usuario -->
+                <!-- Rol Usuario -->
+                <StackPanel Grid.Row="5" Grid.Column="0" VerticalAlignment="Center">
                     <TextBlock Text="Rol" Style="{StaticResource EstilosSubtitulos}"/>
-                    <TextBox x:Name="RolTextBox"  Height="18" Style="{StaticResource EstilosTextBox}"/>
+                </StackPanel>
+                <StackPanel Grid.Row="5" Grid.Column="1" VerticalAlignment="Center">
+                    <TextBox x:Name="RolTextBox" Style="{StaticResource EstilosTextBox}" Margin="0,10,0,10"/>
                 </StackPanel>
 
-                <StackPanel Grid.Row="6">
-                    <!-- Foto Usuario -->
+                <!-- Foto Usuario -->
+                <StackPanel Grid.Row="6" Grid.Column="0" VerticalAlignment="Center">
                     <TextBlock Text="Foto" Style="{StaticResource EstilosSubtitulos}"/>
-                    <Button Content="Seleccionar Imagen" Click="SeleccionarImagen_Click" Width="Auto" Height="Auto" VerticalAlignment="Bottom"/>
+                </StackPanel>
+                <StackPanel Grid.Row="6" Grid.Column="1">
+                    <Button Content="Seleccionar Imagen"  Style="{StaticResource EstilosButton}" VerticalAlignment="Center" Height="30" Margin="0,10,0,10"/>
                 </StackPanel>
 
                 <!-- Botones -->
-                <StackPanel Grid.Row="7" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,0">
-                    <Button Content="Añadir" Style="{StaticResource EstilosButton}" Width="150" Height="30" Click="ClickAñadir"/>
-                    <Separator Width="20" Visibility="Hidden"/>
-                    <Button Content="Editar" Style="{StaticResource EstilosButton}" Width="150" Height="30" Click="ClickEditar"/>
+                <StackPanel Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,0">
+                    <Button Content="Guardar" Style="{StaticResource EstilosButton}" Width="400" Height="30"/>
                 </StackPanel>
-
             </Grid>
         </Border>
     </Grid>
