--- a/G4-EmployeeRegister/G4-EmployeeRegister/Views/UserView.xaml
+++ b/G4-EmployeeRegister/G4-EmployeeRegister/Views/UserView.xaml
@@ -5,7 +5,8 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:G4_EmployeeRegister.Views"
       mc:Ignorable="d" 
-      Title="UserView" Height="450" Width="800"
+      xmlns:uc="clr-namespace:G4_EmployeeRegister.UserControls"
+      Title="UserView" Height="700" Width="800"
       ResizeMode="NoResize">
 
     <!-- Fondo -->
@@ -17,7 +18,8 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="3*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="5*"/>
         </Grid.RowDefinitions>
 
         <!-- Header -->
@@ -26,23 +28,26 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="4*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
+            <StackPanel Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center">
+                <uc:UsersControlador   Width="602" Height="72"/>
+            </StackPanel>
+
             <!-- Logo -->
+            <!--
             <Image Source="/Resources/Iconos/logo.png"
                     Grid.Column="0"
                     Width="40"
                     HorizontalAlignment="Center"
                     Style="{StaticResource EstiloImagen}"/>
 
+            -->
             <!-- Nombre Usuario -->
-            <TextBlock Text="Adrián Rodríguez Rodríguez"
-                       Grid.Column="1" 
-                       VerticalAlignment="Center"
-                       Style="{StaticResource EstiloTextoTitulo}"/>
+
+
 
             <!-- Botón Salir -->
             <Button x:Name="BotonSalir"
@@ -57,10 +62,14 @@
             </Button>
 
         </Grid>
-
+        <TextBlock Text="Adrián Rodríguez Rodríguez"
+            Grid.Column="1" 
+            Grid.Row="1"
+            VerticalAlignment="Center"
+            Style="{StaticResource EstiloTextoTitulo}"/>
 
         <!-- Botones -->
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="6*"/>
@@ -85,7 +94,7 @@
         </Grid>
 
         <!-- Historial -->
-        <StackPanel Grid.Row="2" Margin="0,20,0,0">
+        <StackPanel Grid.Row="3" Margin="0,20,0,0">
             <DataGrid 
                       AutoGenerateColumns="False"
                       HorizontalAlignment="Stretch"
