--- a/G4-EmployeeRegister/G4-EmployeeRegister/Views/UserView.xaml
+++ b/G4-EmployeeRegister/G4-EmployeeRegister/Views/UserView.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:G4_EmployeeRegister.Views"
       mc:Ignorable="d" 
       xmlns:uc="clr-namespace:G4_EmployeeRegister.UserControls"
-      Title="UserView" Height="700" Width="800"
+      Title="UserView" Height="600" Width="800"
       ResizeMode="NoResize">
 
     <!-- Fondo -->
@@ -19,7 +19,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="5*"/>
+            <RowDefinition Height="6*"/>
         </Grid.RowDefinitions>
 
         <!-- Header -->
@@ -32,22 +32,9 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <StackPanel Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center">
-                <uc:UsersControlador   Width="602" Height="72"/>
+            <StackPanel Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <uc:UsersControlador/>
             </StackPanel>
-
-            <!-- Logo -->
-            <!--
-            <Image Source="/Resources/Iconos/logo.png"
-                    Grid.Column="0"
-                    Width="40"
-                    HorizontalAlignment="Center"
-                    Style="{StaticResource EstiloImagen}"/>
-
-            -->
-            <!-- Nombre Usuario -->
-
-
 
             <!-- Botón Salir -->
             <Button x:Name="BotonSalir"
@@ -66,6 +53,7 @@
             Grid.Column="1" 
             Grid.Row="1"
             VerticalAlignment="Center"
+            HorizontalAlignment="Center"
             Style="{StaticResource EstiloTextoTitulo}"/>
 
         <!-- Botones -->
@@ -93,33 +81,35 @@
                     Margin="10,0,15,0"/>
         </Grid>
 
-        <!-- Historial -->
+        <!-- Tabla Fichajes -->
         <StackPanel Grid.Row="3" Margin="0,20,0,0">
-            <DataGrid 
-                      AutoGenerateColumns="False"
-                      HorizontalAlignment="Stretch"
-                      VerticalAlignment="Stretch"
-                      ColumnWidth="*"
-                      IsReadOnly="True"
-                      CanUserAddRows="False"
-                      CanUserDeleteRows="False"
-                      Style="{StaticResource EstilosDataGrid}">
+            <Grid Grid.Row="3" Width="Auto" Margin="0,10,0,0">
+                <ScrollViewer VerticalScrollBarVisibility="Auto"
+                  HorizontalScrollBarVisibility="Disabled">
+                    <StackPanel Grid.Row="2">
+                        <DataGrid x:Name="HistorialFichaje"
+                                  AutoGenerateColumns="False"
+                                  HorizontalAlignment="Stretch"
+                                  VerticalAlignment="Stretch"
+                                  ColumnWidth="*"
+                                  IsReadOnly="True"
+                                  ItemsSource="{Binding Fichajes}"
+                                  CanUserAddRows="False"
+                                  CanUserDeleteRows="False"
+                                  Style="{StaticResource EstilosDataGrid}">
 
-                <!-- Alinear Contenido Celdas al Centro -->
-                <DataGrid.CellStyle>
-                    <Style TargetType="DataGridCell">
-                        <Setter Property="HorizontalContentAlignment" Value="Center" />
-                        <Setter Property="VerticalContentAlignment" Value="Center" />
-                    </Style>
-                </DataGrid.CellStyle>
+                            <DataGrid.Columns>
+                                <DataGridTextColumn Header="IdFichaje" Binding="{Binding IdFichaje}" />
+                                <DataGridTextColumn Header="IdUsuario" Binding="{Binding IdUsuario}" />
+                                <DataGridTextColumn Header="FechaHora" Binding="{Binding FechaHora}" />
+                                <DataGridTextColumn Header="Tipo" Binding="{Binding Tipo}" />
+                                <DataGridTextColumn Header="Observaciones" Binding="{Binding Observaciones}" />
+                            </DataGrid.Columns>
 
-                <DataGrid.Columns>
-                    <DataGridTextColumn Header="Fecha" Binding="{Binding Fecha}" />
-                    <DataGridTextColumn Header="Entrada" Binding="{Binding Entrada}" />
-                    <DataGridTextColumn Header="Salida" Binding="{Binding Salida}" />
-                </DataGrid.Columns>
-
-            </DataGrid>
+                        </DataGrid>
+                    </StackPanel>
+                </ScrollViewer>
+            </Grid>
         </StackPanel>
 
     </Grid>
