--- a/G4-EmployeeRegister/G4-EmployeeRegister/Views/UserView.xaml
+++ b/G4-EmployeeRegister/G4-EmployeeRegister/Views/UserView.xaml
@@ -47,7 +47,7 @@
             </Button>
 
         </Grid>
-        <TextBlock Text="{Binding Nombre}"
+        <TextBlock Text="{Binding NombreCompleto}"
             Grid.Column="1" 
             Grid.Row="1"
             VerticalAlignment="Center"
